# hwLedger

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ADR.md  AGENTS.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  GUI_CAPTURE_TODO.md  LICENSE  MIGRATION.md  PLAN.md  PRD.md  PUBLISHING_STATUS.md  README.md  RICH_MEDIA.md  SECURITY.md  SPEC.md  WORKLOG.md  audit_scorecard.json  ca.crt  chatdocs.md  clippy.toml  deny.toml  lefthook.yml  llms.txt  openapi.yaml  rustfmt.toml
apps/streamlit/: PARITY.md  README.md  app.py  pyproject.toml  run.py  run.sh
apps/streamlit/journeys/: .gitignore  README.md  package.json  playwright.config.ts  tsconfig.json
apps/streamlit/journeys/lib/: aria-snapshot.ts  journey.ts
apps/streamlit/journeys/scripts/: record-all.sh  seed-placeholders.sh  (+2 more)
apps/streamlit/lib/: charts.py  cost_model.py  ffi.py  ffi_ext.py  perf_model.py  tokens.py
apps/streamlit/pages/: 01_Planner.py  02_Probe.py  03_Fleet.py  04_Ledger.py  05_Settings.py  06_HF_Search.py  07_WhatIf.py  08_Export.py
apps/streamlit/scripts/: run-streamlit.sh
apps/streamlit/tests/: test_tokens.py
crates/hwledger-agent/: Cargo.toml
crates/hwledger-agent/src/: config.rs  error.rs  keypair.rs  lib.rs  main.rs  registration.rs  state.rs
crates/hwledger-agent/tests/: config_tests.rs  state_deep.rs
crates/hwledger-arch/: Cargo.toml
crates/hwledger-arch/benches/: classify.rs
crates/hwledger-arch/src/: lib.rs
crates/hwledger-arch/tests/: golden.rs
crates/hwledger-attest/: Cargo.toml
crates/hwledger-attest/src/: lib.rs
crates/hwledger-attest/tests/: git_wrapped_lockdown.rs
crates/hwledger-cli/: Cargo.toml
crates/hwledger-cli/src/: main.rs  output.rs
crates/hwledger-cli/tests/: export_integration.rs  integration.rs  stub_fr_plan_ui.rs  user_story_plan_help.rs
crates/hwledger-core/: Cargo.toml
crates/hwledger-core/benches/: kv_math.rs
crates/hwledger-core/src/: lib.rs
crates/hwledger-core/tests/: nfr_stubs.rs  proptest_math.rs
crates/hwledger-devtools/: Cargo.toml
crates/hwledger-devtools/src/: streamlit_dev.rs
crates/hwledger-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/hwledger-ffi/src/: lib.rs
crates/hwledger-ffi/tests/: stub_fr_ui.rs
crates/hwledger-fleet-proto/: Cargo.toml
crates/hwledger-fleet-proto/src/: lib.rs
crates/hwledger-frame-audit/: Cargo.toml
crates/hwledger-frame-audit/src/: lib.rs  main.rs
crates/hwledger-gui-recorder/: Cargo.toml  build.rs  cbindgen.toml
crates/hwledger-gui-recorder/src/: bin.rs  error.rs  ffmpeg.rs  lib.rs  manifest.rs  recorder.rs  sck_bridge.rs
crates/hwledger-gui-recorder/swift-sck/: Package.swift
crates/hwledger-gui-recorder/tests/: integration_test.rs
crates/hwledger-hf-client/: Cargo.toml
crates/hwledger-hf-client/src/: cache.rs  error.rs  lib.rs  model.rs
crates/hwledger-hf-client/tests/: network_integration.rs  wiremock_tests.rs
crates/hwledger-inference/: Cargo.toml
crates/hwledger-inference/src/: backend.rs  error.rs  lib.rs  traits.rs
crates/hwledger-inference/tests/: stub_fr_inf.rs
crates/hwledger-ingest/: Cargo.toml
crates/hwledger-ingest/benches/: gguf_parse.rs
crates/hwledger-ingest/src/: config.rs  error.rs  gguf.rs  hf.rs  lib.rs  lmstudio.rs  mlx.rs  ollama.rs  resolver.rs  safetensors.rs
crates/hwledger-ingest/tests/: chaos.rs  gguf_deep.rs  gguf_tests.rs  hf_tests.rs  safetensors_deep.rs  safetensors_tests.rs
crates/hwledger-journey-render/: Cargo.toml
crates/hwledger-journey-render/src/: batch.rs  lib.rs  main.rs  manifest.rs
crates/hwledger-journey-render/tests/: smoke.rs
crates/hwledger-ledger/: Cargo.toml
crates/hwledger-ledger/benches/: event_append.rs
crates/hwledger-ledger/src/: error.rs  event.rs  lib.rs  retention.rs  store.rs
crates/hwledger-ledger/tests/: store_deep.rs
crates/hwledger-mlx-sidecar/: Cargo.toml
crates/hwledger-mlx-sidecar/src/: error.rs  lib.rs  protocol.rs  sidecar.rs  tests.rs
crates/hwledger-mlx-sidecar/tests/: chaos.rs  integration_live_mlx.rs
crates/hwledger-predict/: Cargo.toml
crates/hwledger-predict/data/: benchmarks.yaml
crates/hwledger-predict/src/: benchmarks.rs  formulas.rs  lib.rs  techniques.rs  transform.rs
crates/hwledger-probe/: Cargo.toml
crates/hwledger-probe/examples/: metal_dump.rs  metal_keys.rs
crates/hwledger-probe/src/: amd.rs  cache.rs  intel.rs  lib.rs  metal.rs  nvidia.rs
crates/hwledger-probe/tests/: chaos.rs  race.rs  stub_fr_tel.rs
crates/hwledger-release/: Cargo.toml
crates/hwledger-release/src/: appcast.rs  bin.rs  bundle.rs  dmg.rs  error.rs  keyframes.rs  lib.rs  notarize.rs  record.rs  subprocess.rs  xcframework.rs
crates/hwledger-server/: Cargo.toml
crates/hwledger-server/benches/: routes.rs
crates/hwledger-server/src/: admin_extractor.rs  ca.rs  cert_extract.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  rentals.rs  routes.rs  ssh.rs  tailscale.rs  tls.rs
crates/hwledger-server/tests/: ca_tests.rs  chaos.rs  error_tests.rs  integration.rs  integration_tests.rs  rentals_tests.rs
crates/hwledger-traceability/: Cargo.toml
crates/hwledger-traceability/benches/: scan.rs
crates/hwledger-traceability/src/: journeys.rs  lib.rs  main.rs  prd.rs  report.rs  scan.rs
crates/hwledger-traceability/tests/: integration.rs
crates/hwledger-user-story-macros/: Cargo.toml
crates/hwledger-user-story-macros/src/: lib.rs
crates/hwledger-user-story-macros/tests/: basic_expansion.rs  compile_fail.rs  record_on.rs
crates/hwledger-user-story-runtime/: Cargo.toml
crates/hwledger-user-story-runtime/src/: lib.rs
crates/hwledger-verify/: Cargo.toml  README.md
crates/hwledger-verify/src/: bin.rs  cache.rs  client.rs  lib.rs
crates/hwledger-verify/tests/: integration.rs  lib_tests.rs
tools/agreement-report/: Cargo.toml
tools/agreement-report/src/: main.rs
tools/bbox-from-ocr/: Cargo.toml
tools/bbox-from-ocr/src/: main.rs
tools/bbox-ground/: Cargo.toml
tools/bbox-ground/src/: corpus.rs  lib.rs  main.rs
tools/bundle-app/: Cargo.toml
tools/bundle-app/src/: main.rs
(+1366 files in other folders)
