[workspace]
resolver = "2"
members = [
    "crates/hwledger-core",
    "crates/hwledger-arch",
    "crates/hwledger-ingest",
    "crates/hwledger-probe",
    "crates/hwledger-inference",
    "crates/hwledger-mlx-sidecar",
    "crates/hwledger-ledger",
    "crates/hwledger-fleet-proto",
    "crates/hwledger-agent",
    "crates/hwledger-server",
    "crates/hwledger-cli",
    "crates/hwledger-ffi",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/KooshaPari/hwLedger"
authors = ["Koosha Pari <kooshapari@gmail.com>"]

[workspace.dependencies]
# error + logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# async + http
tokio = { version = "1", features = ["full"] }
axum = "0.7"
hyper = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tower = "0.5"

# tls / mtls
rustls = "0.23"
rcgen = "0.13"

# db
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate"] }

# hf + model formats
hf-hub = "0.3"
gguf = "0.1"   # TODO: verify crate name (gguf-rs-lib vs gguf)
safetensors = "0.4"

# gpu telemetry
nvml-wrapper = "0.10"

# ssh
russh = "0.46"
deadpool = "0.12"

# discovery
mdns-sd = "0.11"

# utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"

# phenotype-shared reuse (ADR-0005). Path-resolved to the workspace-level
# crates/ directory in repos/. Semver contracts live in the target crates'
# READMEs; we consume the workspace tip and pin via git snapshot on release.
phenotype-event-sourcing = { path = "../crates/phenotype-event-sourcing" }
phenotype-error-core     = { path = "../crates/phenotype-error-core" }
phenotype-config         = { path = "../crates/phenotype-config" }
phenotype-cache-adapter  = { path = "../crates/phenotype-cache-adapter" }
phenotype-health         = { path = "../crates/phenotype-health" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
lto = "fat"
codegen-units = 1
debug = true
