[workspace]
resolver = "2"
members = [
    "crates/hwledger-core",
    "crates/hwledger-arch",
    "crates/hwledger-ingest",
    "crates/hwledger-probe",
    "crates/hwledger-inference",
    "crates/hwledger-mlx-sidecar",
    "crates/hwledger-ledger",
    "crates/hwledger-fleet-proto",
    "crates/hwledger-agent",
    "crates/hwledger-server",
    "crates/hwledger-cli",
    "crates/hwledger-ffi",
    "crates/hwledger-verify",
    "crates/hwledger-traceability",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/KooshaPari/hwLedger"
authors = ["Koosha Pari <kooshapari@gmail.com>"]

[workspace.dependencies]
# error + logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# async + http
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
axum = "0.7"
hyper = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tower = "0.5"

# tls / mtls
rustls = "0.23"
rcgen = "0.13"

# db
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate"] }

# hf + model formats
hf-hub = "0.3"
gguf = "0.1"
safetensors = "0.4"
memmap2 = "0.9"
byteorder = "1"

# gpu telemetry
nvml-wrapper = "0.10"

# ssh
russh = "0.46"
deadpool = "0.12"

# discovery
mdns-sd = "0.11"

# utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
wait-timeout = "0.2"
sysctl = "0.5"
libc = "0.2"
dirs = "5"
tempfile = "3"
pem = "3"
time = "0.3"
x509-parser = "0.16"
der = "0.7"
rsa = "0.9"
p256 = "0.13"
rand = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
hostname = "0.4"
sha2 = "0.10"

# Internal workspace crates
hwledger-core = { path = "crates/hwledger-core" }
hwledger-arch = { path = "crates/hwledger-arch" }
hwledger-ingest = { path = "crates/hwledger-ingest" }
hwledger-probe = { path = "crates/hwledger-probe" }
hwledger-inference = { path = "crates/hwledger-inference" }
hwledger-mlx-sidecar = { path = "crates/hwledger-mlx-sidecar" }
hwledger-ledger = { path = "crates/hwledger-ledger" }
hwledger-fleet-proto = { path = "crates/hwledger-fleet-proto" }
hwledger-agent = { path = "crates/hwledger-agent" }
hwledger-server = { path = "crates/hwledger-server" }
hwledger-ffi = { path = "crates/hwledger-ffi" }

# phenotype-shared reuse (ADR-0005). Path-resolved to the workspace-level
# crates/ directory in repos/. Semver contracts live in the target crates'
# READMEs; we consume the workspace tip and pin via git snapshot on release.
phenotype-event-sourcing = { path = "../crates/phenotype-event-sourcing" }
phenotype-error-core     = { path = "../crates/phenotype-error-core" }
phenotype-config         = { path = "../crates/phenotype-config" }
phenotype-cache-adapter  = { path = "../crates/phenotype-cache-adapter" }
phenotype-health         = { path = "../crates/phenotype-health" }

# CLI framework & utilities
clap = { version = "4", features = ["derive", "env", "string", "wrap_help"] }
clap_complete = "4"
comfy-table = "7"
humansize = "2"
owo-colors = "4"
atty = "0.2"

# dev testing
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
lto = "fat"
codegen-units = 1
debug = true
