[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hwledger-streamlit"
version = "0.1.0"
description = "Streamlit web client for hwLedger — real-time memory planning, device probing, and fleet audit"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "plotly>=5.24",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
