[package]
name = "hwledger-arch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Architecture and design patterns for hwLedger system components"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
hwledger-core = { path = "../hwledger-core" }

[dev-dependencies]
proptest = "1"
