[package]
name = "hwledger-attest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Local-CI attestation + tamper-guard for hwLedger. Emits signed, hash-chained JSON manifests from pre-push gates and verifies their integrity."

[lib]
path = "src/lib.rs"

[[bin]]
name = "hwledger-attest"
path = "src/bin/main.rs"

# `git-wrapped` is a drop-in git shim used by the lockdown policy to reject
# `--no-verify` and `--force` unless a signed justification is present.
# Unix-only (uses std::os::unix::process::CommandExt for exec).
[[bin]]
name = "git-wrapped"
path = "src/bin/git-wrapped.rs"
required-features = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
hostname.workspace = true
dirs.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core", "pem"] }
rand = "0.8"

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
