[package]
name = "hwledger-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for hwLedger operations and diagnostics"

[[bin]]
name = "hwledger-cli"
path = "src/main.rs"

[dependencies]
# core deps
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# CLI
clap.workspace = true
clap_complete.workspace = true
comfy-table.workspace = true
humansize.workspace = true
owo-colors.workspace = true
atty.workspace = true

# hwledger crates
hwledger-core.workspace = true
hwledger-arch.workspace = true
hwledger-ingest.workspace = true
hwledger-probe.workspace = true
hwledger-ledger.workspace = true
hwledger-fleet-proto.workspace = true
hwledger-hf-client.workspace = true
hwledger-predict.workspace = true
hwledger-attest.workspace = true

# HTTP client
reqwest.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
