[package]
name = "hwledger-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core data types and traits for hwLedger hardware telemetry infrastructure"

[dependencies]
thiserror.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest = "1"
criterion = { workspace = true }

[[bench]]
name = "kv_math"
harness = false
