[package]
name = "hwledger-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FFI bindings for hwLedger C/C++/Swift integration"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
thiserror.workspace = true
