[package]
name = "hwledger-gui-recorder"
version = "0.1.0"
edition = "2021"
authors = ["KooshaPari <kooshapari@gmail.com>"]
license = "Apache-2.0"
description = "Process-isolated GUI recording harness for hwLedger SwiftUI app via ScreenCaptureKit"
keywords = ["recording", "screencapture", "ffmpeg", "macos", "gui"]

[dependencies]
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "sync", "fs", "io-util", "time", "process", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
cfg-if = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
cocoa = "0.25"
core-foundation = "0.9"

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.40", features = ["full"] }
tracing-subscriber = "0.3"

[lib]
name = "hwledger_gui_recorder"
path = "src/lib.rs"

[[bin]]
name = "hwledger-gui-recorder"
path = "src/bin.rs"

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
all = "allow"
pedantic = "allow"
