[package]
name = "hwledger-hf-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hugging Face Hub search + metadata client for hwLedger"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
chrono.workspace = true
dirs.workspace = true
regex.workspace = true

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
tempfile.workspace = true
