[package]
name = "hwledger-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Machine learning inference runtime for hwLedger predictive analysis"

[dependencies]
thiserror.workspace = true
