[package]
name = "hwledger-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Machine learning inference runtime for hwLedger predictive analysis"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

hwledger-mlx-sidecar = { path = "../hwledger-mlx-sidecar" }
