[package]
name = "hwledger-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Data ingestion pipeline for hwLedger telemetry collection"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
safetensors.workspace = true
memmap2 = "0.9"
byteorder = "1"
hwledger-arch = { path = "../hwledger-arch" }
hwledger-core = { path = "../hwledger-core" }

tokio = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[features]
default = ["hf", "rest"]
hf = ["tokio", "hf-hub", "reqwest"]
rest = ["tokio", "reqwest"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
wiremock = "0.6"
criterion = { workspace = true }

[[bench]]
name = "gguf_parse"
harness = false
