[package]
name = "hwledger-journey-render"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Rust CLI wrapper that orchestrates the Remotion journey-render pipeline (annotate keyframes → render rich MP4)."

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "hwledger-journey-render"
path = "src/main.rs"
