[package]
name = "hwledger-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Persistent ledger storage and event sourcing for hwLedger"

[dependencies]
thiserror.workspace = true
