[package]
name = "hwledger-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Persistent ledger storage and event sourcing for hwLedger"

[dependencies]
phenotype-event-sourcing.workspace = true
hwledger-fleet-proto = { path = "../hwledger-fleet-proto" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true
