[package]
name = "hwledger-mlx-sidecar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MLX framework sidecar service for Apple Silicon GPU acceleration"

[dependencies]
thiserror.workspace = true
