[package]
name = "hwledger-predict"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Prediction buffet: what-if impact estimator for model/config/technique swaps"

[dependencies]
hwledger-core = { workspace = true }
hwledger-arch = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
