[package]
name = "hwledger-probe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hardware probing and discovery for hwLedger endpoints"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
nvml-wrapper.workspace = true
once_cell.workspace = true
serde.workspace = true
