[package]
name = "hwledger-release"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "hwledger_release"
path = "src/lib.rs"

[[bin]]
name = "hwledger-release"
path = "src/bin.rs"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

tokio = { workspace = true, features = ["rt", "process"] }
clap = { version = "4", features = ["derive"] }

# Ed25519 appcast signing
ed25519-dalek = "2"
base64 = "0.22"

# macOS metadata and plist
plist = "1.6"

# filesystem + temp dirs
tempfile = "3"
walkdir = "2"

# subprocess + retry
wait-timeout = "0.2"
backoff = "0.4"

# zip for optional keyframe bundles
zip = "0.6"

# sha256
sha2 = "0.10"

# datetime
chrono = "0.4"

# home directory
dirs = "5"

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
tempfile = "3"
