[package]
name = "hwledger-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Central ledger server for hwLedger fleet management (FR-FLEET-001)"

[[bin]]
name = "hwledger-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
rustls.workspace = true
rcgen.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
hwledger-fleet-proto = { path = "../hwledger-fleet-proto" }
axum-server = { version = "0.7", features = ["tls-rustls"] }
time = "0.3"
x509-parser = "0.16"
der = "0.7"
rsa = "0.9"
p256 = "0.13"
rand = "0.8"
tempfile.workspace = true
base64 = "0.22"
urlencoding = "2.1"
async-trait = "0.1"
clap = { workspace = true, features = ["derive"] }
russh.workspace = true
russh-keys.workspace = true
tokio-rustls = "0.26"
futures-util = "0.3"

[dev-dependencies]
hwledger-ledger = { path = "../hwledger-ledger" }
criterion = { workspace = true }

[[bench]]
name = "routes"
harness = false
