[package]
name = "hwledger-traceability"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
thiserror.workspace = true
clap.workspace = true
walkdir = "2"

[[bin]]
name = "hwledger-traceability"
path = "src/main.rs"

[lib]
name = "hwledger_traceability"
path = "src/lib.rs"
