[package]
name = "hwledger-user-story-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Runtime helpers for the hwledger-user-story-macros proc-macro: PTY capture, asciicast-v2 writer, manifest emitter."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = "0.8"
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
