[package]
name = "hwledger-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Blackbox screenshot verification via Claude VLM + LLM-judge equivalence for user journeys"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
reqwest.workspace = true
base64 = "0.22"
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
comfy-table.workspace = true
owo-colors.workspace = true

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["full"] }
tempfile = "3"

[[bin]]
name = "hwledger-verify"
path = "src/bin.rs"
