[package]
name = "hwledger-bbox-from-ocr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rewrite annotation bboxes in cli-journey manifests from tesseract TSV word boxes."

[[bin]]
name = "hwledger-bbox-from-ocr"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
