[package]
name = "hwledger-bundle-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "hwLedger macOS .app bundler: wraps swift build + codesign + install_name_tool with Rust control flow."

[[bin]]
name = "hwledger-bundle-app"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
owo-colors = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
